--- a/source/server/static/css/style.css
+++ b/source/server/static/css/style.css
@@ -19,6 +19,7 @@
 /*  box-shadow: 0 1px 2px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);*/
   border: 1px solid #343a40;
+  border-radius: 6px 6px 6px 6px;
   padding: 10px;
 }
 
@@ -28,6 +29,10 @@
 
 .project-list .project-card:hover p {
   color: #18b193;
+}
+
+.box {
+ border: 1px solid #343a40;
 }
 
 /*.project-list .project-card:hover {
