--- a/source/server/static/css/style.css
+++ b/source/server/static/css/style.css
@@ -45,8 +45,8 @@ a.box-link:hover {
 }
 
 .fh-section {
-  min-height: calc(100vh - ( 4.75rem - .75rem ) );
-  max-height: calc(100vh + ( 10.25rem - .75rem ) );
+  min-height: calc(100vh - (3.25rem - .75rem));
+  max-height: 200vh;
   /*height: calc(110vh - ( 3.25rem - .75rem ) );*/
   flex-direction: row;
   justify-content: stretch;
