--- a/source/server/annotation/templates/project_page.html
+++ b/source/server/annotation/templates/project_page.html
@@ -55,8 +55,19 @@
           <div class="right-block">
             <button @click="gotoAnnotation(doc.id)" class="button is-info">Аннотация</button>
             <button class="button is-danger is-outlined" @click="openDelete(index)">Удалить</button>
-            <!-- <p v-show="is_open_delete == index">Test <button>Cancel</button></button></p> -->
           </div>
+        </div>
+      </div>
+      <div class="notification is-info" style="margin-bottom: 1rem" v-show="is_open_delete == index">
+        <p>Вы действительно хотите удалить документ?</p>
+        <br>
+        <div class="field is-grouped">
+          <p class="control">
+            <button class="button is-success is-inverted is-outlined is-small" @click="deleteDoc(doc.id)">Да</button>
+          </p>
+          <p class="control">
+            <button class="button is-danger is-inverted is-outlined is-small" @click="closeDelete()">Нет</button>
+          </p>
         </div>
       </div>
     </div>
