--- a/source/server/annotation/templates/project_page.html
+++ b/source/server/annotation/templates/project_page.html
@@ -40,6 +40,14 @@
       <div class="column">
         <p class="title is-5">Список документов:</p>
       </div>
+      <div class="column">
+        <b-field label="Отфильтровать">
+          <b-select v-model="filter_approved" @input="changeFilterApproved()">
+            <option value="0">Не проверен</option>
+            <option value="1">Проверен</option>
+          </b-select>
+        </b-field>
+      </div>
       <div 
       class="column box"
       id="docs-table"
