--- a/source/server/annotation/templates/project_page.html
+++ b/source/server/annotation/templates/project_page.html
@@ -41,7 +41,7 @@
         <p class="title is-5">Список документов:</p>
       </div>
       <div class="column">
-        <b-field label="Отфильтровать">
+        <b-field horizontal label="Отфильтровать">
           <b-select v-model="filter_approved" @input="changeFilterApproved()">
             <option value="0">Не проверен</option>
             <option value="1">Проверен</option>
