--- a/source/server/annotation/templates/project_page.html
+++ b/source/server/annotation/templates/project_page.html
@@ -6,20 +6,22 @@
 
 {% block content %}
 
-<section class="columns fh-section is-marginless">
-  <aside class="column is-2 is-main-color">
-    <p class="menu-label is-size-6 has-text-white has-text-centered">
-      {{ project.name }}
-    </p>
-    <ul class="menu-list">
-      <li><a href="/projects/{{project.id}}/" class="{% if request.resolver_match.kwargs.action is None %}is-active{% endif %} has-text-white">Инфо</a></li>
-      <li><a href="import" class="{% if request.resolver_match.kwargs.action == 'import' %}is-active{% endif %} has-text-white">Импорт</a></li>
-      <li><a href="export" class="{% if request.resolver_match.kwargs.action == 'export' %}is-active{% endif %} has-text-white">Экспорт</a></li>
-      <hr>
-      <li><a href="tl-labels" class="{% if request.resolver_match.kwargs.action == 'tl-labels' %}is-active{% endif %} has-text-white">Метки</a></li>
-      <hr>
-      <li><a href="settings" class="{% if request.resolver_match.kwargs.action == 'settings' %}is-active{% endif %} has-text-white">Настройки</a></li>
-    </ul>
+<section class="columns is-marginless">
+  <aside class="column is-2 hero is-fullheight is-main-color">
+    <div class="hero-head">
+      <p class="menu-label is-size-6 has-text-white has-text-centered">
+        {{ project.name }}
+      </p>
+      <ul class="menu-list">
+        <li><a href="/projects/{{project.id}}/" class="{% if request.resolver_match.kwargs.action is None %}is-active{% endif %} has-text-white">Инфо</a></li>
+        <li><a href="import" class="{% if request.resolver_match.kwargs.action == 'import' %}is-active{% endif %} has-text-white">Импорт</a></li>
+        <li><a href="export" class="{% if request.resolver_match.kwargs.action == 'export' %}is-active{% endif %} has-text-white">Экспорт</a></li>
+        <hr>
+        <li><a href="tl-labels" class="{% if request.resolver_match.kwargs.action == 'tl-labels' %}is-active{% endif %} has-text-white">Метки</a></li>
+        <hr>
+        <li><a href="settings" class="{% if request.resolver_match.kwargs.action == 'settings' %}is-active{% endif %} has-text-white">Настройки</a></li>
+      </ul>
+    </div>
   </aside>
   <div class="column is-10">
 
