--- a/source/server/annotation/templates/project_tl_labels.html
+++ b/source/server/annotation/templates/project_tl_labels.html
@@ -22,7 +22,7 @@
       <button class="button is-primary" @click="createLabel()">Новая метка</button>
     </div>
     <div class="column is-full" v-if="new_label">
-      <div class="box has-background-white">
+      <div class="box">
         <div class="columns is-multiline is-vcentered">
           <div class="column is-full">
             <div class="tags are-medium has-addons">
