--- a/source/server/static/css/style.css
+++ b/source/server/static/css/style.css
@@ -31,9 +31,9 @@
   color: #18b193;
 }
 
-.box {
+/*.box {
  border: 1px solid #343a40;
-}
+}*/
 
 /*.project-list .project-card:hover {
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
