--- a/source/server/annotation/templates/project_tl_annotation.html
+++ b/source/server/annotation/templates/project_tl_annotation.html
@@ -6,69 +6,141 @@
 
 {% block project-content %}
 
-<h4 class="mb-4 mt-2">Аннотации</h4>
+<div id="project-annotaion">
+  <h4 class="title is-spaced is-4">Аннотации</h4>
+  <h6 class="subtitle is-6">Имя файла: ${doc.file_name}</h6>
+  <div class="field">
+    <b-switch 
+    type="is-success"
+    v-model="is_approved"
+    @input="onChangeApproved()">
+    <span v-if="is_approved">Проверен</span>
+    <span v-if="!is_approved">Не проверен</span>
+    </b-switch>
+  </div>
+  <div class="card">
+    <header class="card-header">
+      <div class="column">
+        <div class="field is-grouped is-grouped-multiline">
+          <div 
+          class="control"
+          v-for="label in labels">
+            <div class="tags has-addons">
+              <a 
+              class="tag"
+              :style="{'background-color': label.color_background, color: label.color_text}"
+              @click="createLabel(label.id)">
+              ${label.name}
+              </a>
+              <span class="tag is-dark">${ label.prefix_key } : ${ label.suffix_key }</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+    <div class="card-content">
+      <div class="tl_anno_row" v-for="data in doc_render" @click="setSelectedRange(data.obj.id)">
+        <span v-for="(chunk, i_chunk) in data.chunks"
+        v-bind:class="{ tag: chunk.type == 'label', 'is-medium': chunk.type == 'label' }"
+        v-bind:style="[chunk.type == 'label' ? {
+        'background-color': labels_hash[chunk.obj.label].color_background,
+        'color': labels_hash[chunk.obj.label].color_text,
+        'text-indent': '0px'} : {}]"
+        :id="i_chunk">${chunk.text}
+          <button 
+          v-if="chunk.type == 'label'"
+          @click="onDeleteLabel(chunk.obj.id, data.obj.id, i_chunk)"
+          type="button"
+          class="delete is-small">
+          </button>
+        </span>
+      </div>
+    </div>
+  </div>
+  <div class="column">
+    <div class="level">
+      <div class="level-left">
+        <div class="level-item">
+          <button class="button is-primary is-outlined" @click="onPrev()" :disabled="!bt_prev_enable">
+            <span class="icon">
+              <i class="fas fa-chevron-left"></i>
+            </span>
+            <span>Предыдущий</span>
+          </button>
+        </div>
+      </div>
+      <div class="level-right">
+        <div class="level-item">
+          <button class="button is-primary is-outlined" @click="onNext()" :disabled="!bt_next_enable">
+            <span>Следующий</span>  
+            <span class="icon">
+              <i class="fas fa-chevron-right"></i>
+            </span>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- <h4 class="mb-4 mt-2">Аннотации</h4>
 
 <div id="project-annotaion">
 
-	<div>
-		<b-alert dismissible :variant="st_variant" :show="st_show" @dismissed="st_show=false">${st_value}</b-alert>
-	</div>
-	
-	<p>Имя файла: ${doc.file_name}</p>
+  <div>
+    <b-alert dismissible :variant="st_variant" :show="st_show" @dismissed="st_show=false">${st_value}</b-alert>
+  </div>
+  
+  <p>Имя файла: ${doc.file_name}</p>
 
-	<b-form-checkbox v-model="is_approved" name="check-button" @input="onChangeApproved()" switch>
-		<span v-if="is_approved">Проверен</span>
-		<span v-if="!is_approved">Не проверен</span>
-	</b-form-checkbox>
+  <b-form-checkbox v-model="is_approved" name="check-button" @input="onChangeApproved()" switch>
+    <span v-if="is_approved">Проверен</span>
+    <span v-if="!is_approved">Не проверен</span>
+  </b-form-checkbox>
 
-	<div class="card">
+  <div class="card">
 
-		<div class="card-header">
-			<div
-				class="tags has-addons label_tag" 
-				v-for="label in labels">
-					<span
-						class="tag"
-						:style="{'background-color': label.color_background, color: label.color_text}"
-						@click="createLabel(label.id)">
-							${label.name}
-					</span>
-			  	<span class="tag is-dark">${label.suffix_key}</span>
-			</div>
-		</div>
+    <div class="card-header">
+      <div
+        class="tags has-addons label_tag" 
+        v-for="label in labels">
+          <span
+            class="tag"
+            :style="{'background-color': label.color_background, color: label.color_text}"
+            @click="createLabel(label.id)">
+              ${label.name}
+          </span>
+          <span class="tag is-dark">${label.suffix_key}</span>
+      </div>
+    </div>
 
-		<div class="card-body">
-			
-			<!-- <p v-for="data in data_render" v-html="data" class="tl_anno_row"></p> -->
-			<!-- <tl-label v-for="seq in doc_data" class="tl_anno_row">${seq}</tl-label> -->
+    <div class="card-body">
 
-			<div v-for="data in doc_render" class="tl_anno_row" @click="setSelectedRange(data.obj.id)">
-				<span v-for="(chunk, i_chunk) in data.chunks"
-					v-bind:class="{ tag: chunk.type == 'label', 'is-medium': chunk.type == 'label' }"
-					v-bind:style="[chunk.type == 'label' ? {
-							'background-color': labels_hash[chunk.obj.label].color_background,
-							'color': labels_hash[chunk.obj.label].color_text,
-							'text-indent': '0px'
-						} : {}]"
-						:id="i_chunk">${chunk.text}
-					<button 
-						v-if="chunk.type == 'label'"
-						@click="onDeleteLabel(chunk.obj.id, data.obj.id, i_chunk)"
-						type="button btn-sm"
-						class="delete is-small">
-					</button>
-				</span>
-			</div>
+      <div v-for="data in doc_render" class="tl_anno_row" @click="setSelectedRange(data.obj.id)">
+        <span v-for="(chunk, i_chunk) in data.chunks"
+          v-bind:class="{ tag: chunk.type == 'label', 'is-medium': chunk.type == 'label' }"
+          v-bind:style="[chunk.type == 'label' ? {
+              'background-color': labels_hash[chunk.obj.label].color_background,
+              'color': labels_hash[chunk.obj.label].color_text,
+              'text-indent': '0px'
+            } : {}]"
+            :id="i_chunk">${chunk.text}
+          <button 
+            v-if="chunk.type == 'label'"
+            @click="onDeleteLabel(chunk.obj.id, data.obj.id, i_chunk)"
+            type="button btn-sm"
+            class="delete is-small">
+          </button>
+        </span>
+      </div>
 
-			<div class="d-flex justify-content-between">
-				<b-button variant="primary" @click="onPrev()" :disabled="!bt_prev_enable">Предыдущий</b-button>
-				<b-button variant="primary" @click="onNext()" :disabled="!bt_next_enable">Следующий</b-button>
-			</div>
-		</div>
-
-		<!-- <button type="button" class="btn" @click="onNext()">Next</button> -->
-	</div>
-</div>
+      <div class="d-flex justify-content-between">
+        <b-button variant="primary" @click="onPrev()" :disabled="!bt_prev_enable">Предыдущий</b-button>
+        <b-button variant="primary" @click="onNext()" :disabled="!bt_next_enable">Следующий</b-button>
+      </div>
+    </div>
+  </div>
+</div> -->
 
 {% endblock %}
 
