--- a/source/server/annotation/templates/project_tl_annotation.html
+++ b/source/server/annotation/templates/project_tl_annotation.html
@@ -7,6 +7,14 @@
 {% block project-content %}
 
 <div id="project-annotaion">
+  <b-notification
+  :type="st_variant"
+  aria-close-label="Close notification"
+  role="alert"
+  :active.sync="st_show"
+  v-show="st_show">
+  ${ st_value }
+  </b-notification>
   <h4 class="title is-spaced is-4">Аннотации</h4>
   <h6 class="subtitle is-6">Имя файла: ${doc.file_name}</h6>
   <div class="field">
@@ -82,65 +90,6 @@
     </div>
   </div>
 </div>
-
-<!-- <h4 class="mb-4 mt-2">Аннотации</h4>
-
-<div id="project-annotaion">
-
-  <div>
-    <b-alert dismissible :variant="st_variant" :show="st_show" @dismissed="st_show=false">${st_value}</b-alert>
-  </div>
-  
-  <p>Имя файла: ${doc.file_name}</p>
-
-  <b-form-checkbox v-model="is_approved" name="check-button" @input="onChangeApproved()" switch>
-    <span v-if="is_approved">Проверен</span>
-    <span v-if="!is_approved">Не проверен</span>
-  </b-form-checkbox>
-
-  <div class="card">
-
-    <div class="card-header">
-      <div
-        class="tags has-addons label_tag" 
-        v-for="label in labels">
-          <span
-            class="tag"
-            :style="{'background-color': label.color_background, color: label.color_text}"
-            @click="createLabel(label.id)">
-              ${label.name}
-          </span>
-          <span class="tag is-dark">${label.suffix_key}</span>
-      </div>
-    </div>
-
-    <div class="card-body">
-
-      <div v-for="data in doc_render" class="tl_anno_row" @click="setSelectedRange(data.obj.id)">
-        <span v-for="(chunk, i_chunk) in data.chunks"
-          v-bind:class="{ tag: chunk.type == 'label', 'is-medium': chunk.type == 'label' }"
-          v-bind:style="[chunk.type == 'label' ? {
-              'background-color': labels_hash[chunk.obj.label].color_background,
-              'color': labels_hash[chunk.obj.label].color_text,
-              'text-indent': '0px'
-            } : {}]"
-            :id="i_chunk">${chunk.text}
-          <button 
-            v-if="chunk.type == 'label'"
-            @click="onDeleteLabel(chunk.obj.id, data.obj.id, i_chunk)"
-            type="button btn-sm"
-            class="delete is-small">
-          </button>
-        </span>
-      </div>
-
-      <div class="d-flex justify-content-between">
-        <b-button variant="primary" @click="onPrev()" :disabled="!bt_prev_enable">Предыдущий</b-button>
-        <b-button variant="primary" @click="onNext()" :disabled="!bt_next_enable">Следующий</b-button>
-      </div>
-    </div>
-  </div>
-</div> -->
 
 {% endblock %}
 
